--- a/src/app/training/old-training/old-training.component.html
+++ b/src/app/training/old-training/old-training.component.html
@@ -3,7 +3,7 @@
     <input
       matInput
       type="text"
-      (keyup)="doFilter($event.target.value)"
+      (keyup)="doFilter($event.target['value'])"
       placeholder="Filter"
     />
   </mat-form-field>
