--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,42 +1,28 @@
 <section class="new-training" fxLayout fxLayoutAlign="center">
   <form (ngSubmit)="onStartTraining(f)" #f="ngForm">
     <mat-card fxFlex.xs="100%" fxFlex="400px">
-      <mat-card-title fxLayoutAlign="center"
-        >Time to start a workout!</mat-card-title
-      >
+      <mat-card-title fxLayoutAlign="center">Time to start a workout!</mat-card-title>
       <mat-card-content fxLayoutAlign="center">
-        <mat-form-field *ngIf="!(isLoading$ | async) && exercises$ | async">
-          <mat-select
-            placeholder="Choose Exercise"
-            ngModel
-            name="exercise"
-            required
-          >
-            <mat-option
-              *ngFor="let exercise of exercises$ | async"
-              [value]="exercise.id"
-            >
+        <mat-form-field fxLayout="column" *ngIf="!(isLoading$ | async) && exercises$ | async">
+          <mat-select placeholder="Choose Exercise" ngModel name="exercise"
+            (selectionChange)="onExerciseSelected($event.value)" required>
+            <mat-option *ngFor="let exercise of exercises$ | async" [value]="exercise.id">
               {{ exercise.name }}
             </mat-option>
           </mat-select>
         </mat-form-field>
+        <div class="discription" fxLayout="row" *ngIf="isSelected">
+          <div>{{ (selectedExercise$ | async)?.duration }} second</div>
+          <div>{{ (selectedExercise$ | async)?.calories }} Calories</div>
+        </div>
         <mat-spinner *ngIf="isLoading$ | async"></mat-spinner>
       </mat-card-content>
+
       <mat-card-actions fxLayoutAlign="center" *ngIf="!(isLoading$ | async)">
-        <button
-          *ngIf="exercises$ | async"
-          type="submit"
-          mat-button
-          [disabled]="f.invalid"
-        >
+        <button *ngIf="exercises$ | async" type="submit" mat-button [disabled]="f.invalid">
           Start
         </button>
-        <button
-          *ngIf="!(exercises$ | async)"
-          type="button"
-          mat-button
-          (click)="fetchExercises()"
-        >
+        <button *ngIf="!(exercises$ | async)" type="button" mat-button (click)="fetchExercises()">
           Fetch Again
         </button>
       </mat-card-actions>
