--- a/src/app/training/new-training/new-training.component.scss
+++ b/src/app/training/new-training/new-training.component.scss
@@ -1,3 +1,12 @@
 .new-training {
   padding: 30px;
+
+  mat-card-content {
+    mat-form-field {
+      width: 100%;
+    }
+    .discription {
+      width: 100%;
+    }
+  }
 }
